# IMAC_1-1_PA_TDs

./: FicheCPP.txt  README.md
Premier Programme - CMakeLists/: CMakeLists.txt  helloImac.cpp
TD01/: .gitignore  CMakeLists.txt
TD01/src/: td01_ex01.cpp  td01_ex02.cpp
TD02/: CMakeLists.txt
TD02/src/: td02_ex01.cpp  td02_ex02.cpp  td02_ex03.cpp  td02_ex04.cpp  td02_ex05.cpp  td02_ex06.cpp  td02_ex07.cpp
TD03/: CMakeLists.txt
TD03/src/: td03_ex01.cpp  td03_ex02.cpp  td03_ex03.cpp  td03_ex04.cpp  td03_ex05.cpp  td03_ex06.cpp
TD04/: CMakeLists.txt
TD04/src/: td04_ex01.cpp  td04_ex02.cpp  td04_ex03.cpp  td04_ex04.cpp  td04_ex05.cpp  td04_ex06.cpp  td04_ex07.cpp  td04_ex08.cpp
TD05/TD05_CORRECTION/TD5/src/: main_ex01.cpp  main_ex04.cpp  main_ex05.cpp
TD05/TD05_CORRECTION/src/: main_ex02.cpp  main_ex03.cpp  main_ex06.cpp
TD05/src/: ex01.cpp  ex02.cpp  ex04.cpp
TD06/: CMakeLists.txt
TD06/TD06_CORRECTION/src/: main_ex01.cpp  main_ex02.cpp  main_ex03.cpp  main_ex04.cpp  main_ex05.cpp  main_ex06.cpp  main_ex07.cpp
TD06/src/: ex01.cpp  ex02.cpp  ex04.cpp  ex07.cpp
TD07/: CMakeLists.txt  Exo 2.txt
TD07/src/: ex01.cpp  ex01pt2.cpp  ex02.cpp
TD08/: CMakeLists.txt
TD08 Correction/: CMakeLists.txt
TD08 Correction/src/: fraction.hpp  main.cpp  utils.cpp
TD08/TD08 Correction/src/: fraction.cpp  utils.cpp  utils.hpp
TD08/src/: fraction.cpp  fraction.hpp  main.cpp  utils.cpp  utils.hpp
TD08/src_exemple/: ex01.cpp  utilities.cpp  utilities.hpp
TD09/: CMakeLists.txt
TD09 Correction/TD9/src/: main_ex2.cpp  main_ex3.cpp
TD09/TD09 Correction/src/: main_ex1.cpp  main_ex3.cpp
TD09/src/: ex01.cpp  ex02.cpp  ex03.cpp
