cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 17)

project(TD04)

add_executable(ex01 src/td04_ex01.cpp)

add_executable(ex02 src/td04_ex02.cpp)

add_executable(ex03 src/td04_ex03.cpp)

add_executable(ex04 src/td04_ex04.cpp)

add_executable(ex05 src/td04_ex05.cpp)

add_executable(ex06 src/td04_ex06.cpp)

add_executable(ex07 src/td04_ex07.cpp)

add_executable(ex08 src/td04_ex08.cpp)